# elsa-runtime

./: .gitignore  BUILD-REPORT-PHASE3.md  PROGRESS.md  README.md  SESSION-LOG.md  pyproject.toml
.github/workflows/: ci.yml
config/: workspace_registry.yaml
data/paper_harvest/: test_batch.yaml
docs/: INTEGRATION-TEST-REPORT-v3.41.md  INTEGRATION-TEST-REPORT.md  PAPER-SPLITTER-BUILD-REPORT.md  PROGRESS.md
docs/elsa-updates/: AGENT-TEAM-BUILD.md
mcp_server/: __main__.py  active_insights.py  server.py
mcp_server/tests/: test_active_insights.py  test_write_tools.py
scripts/: backfill_paper_metadata.py  paper_harvest.py
src/elsa_runtime/cost/: batch_scheduler.py  execution_log.py  reporter.py  tracker.py
tests/: conftest.py  test_arxiv_meta.py  test_build_filter.py  test_chunker.py  test_collections.py  test_domain_context.py  test_gdocs.py  test_gdocs_universal.py  test_gmail_attachments.py  test_gmail_compose.py  test_insight_store.py  test_latex_cleaner.py  test_latex_splitter.py  test_migration.py  test_model_router.py  test_paper_splitter.py  test_pdf_splitter.py  test_retrieval.py  test_schema_registry.py  test_schemas.py  test_token_tracker.py  test_vectorstore.py
tests/fixtures/: sample_paper.tex
tests/integration/: test_arxiv_splitter.py  test_step1_lancedb_real.py  test_step2_retrieval_pipeline.py  test_step3_insight_store.py  test_step4_llm_retrieval.py  test_step5_knowledge_loop.py
tests/test_module/: test_graph.py  test_module.py  test_node.py  test_signature.py  test_telemetry.py  test_verifier.py
tools/gmail/: gmail_tool.py  setup.sh
(+70 files in other folders)
