[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elsa-runtime"
version = "0.1.0"
description = "Core runtime for Elsa System multi-agent AI assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/elsa_runtime"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
